--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -26,5 +27,8 @@
     "gulp-terser": "^1.2.0",
     "gulp-terser-js": "^5.1.2",
     "imagemin-pngquant": "^8.0.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
