--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js",
-    "serv": "browser-sync start --server --files ./dist/index.html"
-
+    "start": "node server/server.js"
   },
   "author": "",
   "license": "ISC",
